<resources>
    <string name="app_name">PaymentUI</string>

    <string name="toolbar_title">Payment Methods</string>


    <!--    API RESPONSE CODE ERROR MESSAGES-->
    <string name="notFound">Not Found Request. Unable to Resolve</string>
    <string name="serverError">Internal Server Error. Try Again</string>
    <string name="gatewayTimeoutError">Request Timeout. Check your Internet</string>
    <string name="gatewayBadError">Request could not complete</string>
    <string name="forbiddenError">Request Forbidden</string>
    <string name="unauthorizedError">Request Unauthorized</string>
    <string name="badRequestError">Bad Request. Request could not complete</string>
    <string name="generalError">Something went wrong. Sorry for the inconvenience</string>


    <!--    DUMMY CARD LOGO IN CASE OF NO LOGO ICON-->
    <string name="dummyCard">https://www.clipartmax.com/png/middle/110-1105004_credit-card-free-icon-credit-card-flat-png.png</string>


    <string name="DebitCard">Debit Card</string>
    <string name="CreditCard">Credit Card</string>
    <string name="OnlineBankTransfer">Online Bank Transfer</string>
    <string name="OpenInvoice">Open Invoice</string>
    <string name="Wallet">Wallet</string>
    <string name="DirectDebit">Direct Debit</string>
    <string name="Others">Others"</string>



    <string name="WentWrong">Something Went Wrong. Try Again Later"</string>
    <string name="NoInternet">No Internet Connectivity"</string>

</resources>